modify for community mods

--- a/ui/mods/army_of_cards/builder/builder.html
+++ b/ui/mods/army_of_cards/builder/builder.html
@@ -105,7 +105,7 @@ app.loadTemplate("coui://ui/main/game/galactic_war/shared/template/gwt_card_hori
     css: { btn_hero_disabled: !ready() }
     ">
     <div class="btn_label" style="padding: 0px 40px;">
-      <loc>Create Armies</loc>
+      <loc>Create Server Mod</loc>
     </div>
   </div>
 </div>
