--- a/ui/mods/army_of_cards/builder/builder.html
+++ b/ui/mods/army_of_cards/builder/builder.html
@@ -18,12 +18,6 @@
 
 <body>
 
-<script id="cardTemplate">
-app.loadTemplate("coui://ui/main/game/galactic_war/shared/template/gwt_card_horizontal",
-                 "coui://ui/main/game/galactic_war/shared/template/gwt_card",
-                 "coui://ui/main/game/galactic_war/shared/template/gwt_card");
-</script>
-
 <!-- VISUAL TREATMENTS -->
 <div class="background_glow"></div>
 
@@ -78,7 +72,13 @@ app.loadTemplate("coui://ui/main/game/galactic_war/shared/template/gwt_card_hori
       <div class="col-padding">
         <ul data-bind="foreach: startCards">
           <li class="start-card" data-bind="css: {selected: selected}, click: function() {$root.selectStartCard(id)}">
-            <span data-bind="text: id"></span>
+            <div class="icon-col">
+              <img data-bind="attr: {src: icon}">
+            </div>
+            <div class="text-col">
+              <h4 data-bind="text: summary" class="summary"></h4>
+              <span data-bind="text: desc" class="desc"></span>
+            </div>
           </li>
         </ul>
       </div>
@@ -88,7 +88,13 @@ app.loadTemplate("coui://ui/main/game/galactic_war/shared/template/gwt_card_hori
       <div class="col-padding">
         <ul data-bind="foreach: cards">
           <li class="card" data-bind="css: {selected: selected}, click: function() {$root.selectCard($data)}">
-            <span data-bind="text: id"></span>
+            <div class="icon-col">
+              <img data-bind="attr: {src: icon}">
+            </div>
+            <div class="text-col">
+              <h4 data-bind="text: summary" class="summary"></h4>
+              <span data-bind="text: desc" class="desc"></span>
+            </div>
           </li>
         </ul>
       </div>
